# demo-python-drm

./: README.md  encrypted.py  main.py  pyproject.toml
